# Line-Following-Robot

./: CMakeLists.txt  main.c
include/common/: robot_config.h
include/control/: motor_control.h  pid_controller.h  wheel_encoder.h
include/sensors/: barcode_scanner.h  ir_sensor.h  line_following.h  ultrasonic.h
src/control/: motor_control.c  pid_controller.c  wheel_encoder.c
src/sensors/: barcode_scanner.c  ir_sensor.c  line_following.c  ultrasonic.c
tests/: encoder_motor_test.c  motor_encoder_test.c  motor_simple_test.c  simple_motor_encoder_test.c  test_barcode_scanner.c  test_encoder_diagnostic.c  test_ir_basic.c  test_ir_sensor.c  test_line_following.c  test_motor_encoder.c
